force-app/main/default/objects/Staff_Quarter_Vacation_Request__c/Staff_Quarter_Vacation_Request__c.object-meta.xml
<CustomObject>
    <label>Staff Quarter Vacation Request</label>
    <nameField>
        <displayFormat>SQVR-{0000000}</displayFormat>
        <label>Staff Quarters Vacation Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff Quarter Vacation Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>