force-app/main/default/objects/Staff_Quarter_Vacation_Request__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>AccountId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>