force-app/main/default/objects/Staff_Quarter_Vacation_Request__c/fields/Staff_Quarters_Request__c.field-meta.xml
<CustomField>
    <fullName>Staff_Quarters_Request__c</fullName>
    <label>Staff Quarters Request</label>
    <referenceTo>Staff_Quarters_Request__c</referenceTo>
    <relationshipLabel>Staff Quarter Vacation Requests</relationshipLabel>
    <relationshipName>Staff_Quarter_Vacation_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>