force-app/main/default/objects/Staff_Quarter_Vacation_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Vacating Initiated</fullName>
            </value>
            <value>
                <fullName>Request to Report Manager</fullName>
            </value>
            <value>
                <fullName>Request to Admin Director</fullName>
            </value>
            <value>
                <fullName>Request to HR Lead</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Initiated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>