force-app/main/default/objects/Staff_Quarter_Vacation_Request__c/fields/Vacated_Date__c.field-meta.xml
<CustomField>
    <fullName>Vacated_Date__c</fullName>
    <label>Vacated Date</label>
    <type>Date</type>
</CustomField>