force-app/main/default/objects/Staff_Quarter_Vacation_Request__c/recordTypes/Staff_Quarter_Vacat.recordType-meta.xml
<RecordType>
    <fullName>Staff_Quarter_Vacat</fullName>
    <active>true</active>
    <label>Staff Quarter Vacat</label>
</RecordType>